@@ -1,6 +1,8 @@
 Revision history for WebService-FogBugz
 =======================================
 
+        - added Config module.
+
 0.1.0   2014-12-29
         - New Maintainer: Barbie.
         - aded META files as permanent files.
